# GitDigger

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TASKS.MD  docker-compose.yml  hello.py  pyproject.toml
src/: app.py
src/api/: main.py
src/api/routes/: documents.py
src/config/: config.py
src/models/: database.py  schema.py
src/services/: github_service.py  llm_service.py  pdf_service.py
